<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
<PreferenceCategory android:title="@string/settings" >
<CheckBoxPreference
android:defaultValue="false"
android:key="backupPref"
android:summary="@string/settings2"
android:title="@string/settings1" />
<EditTextPreference
                android:key="edit_text"
                android:title="Wie Pause signalisieren?"
                android:dialogLayout="@layout/spinner"
                android:summary="What to do when Timer runs out?"/> 
                   <com.dlka.android.apps.overlay_for_android.TimePreference
        android:key="timePrefA_Key"
        android:title="@string/timePrefA_title"
        android:summary="Nach wievielen Minuten Pause machen?(Muss eingestellt sein)"/>    
    <com.dlka.android.apps.overlay_for_android.TimePreference
        android:key="timePrefB_Key"
        android:title="@string/timePrefB_title"
        android:summary="Nach wievielen Minuten eine zweite Pause machen?(Optional)"/>
                
<Preference android:title="@string/prefs_web_page" >
    <intent android:action="android.intent.action.VIEW"
            android:data="http://www.kulsch-it.de" />
</Preference>
</PreferenceCategory>
<PreferenceCategory
android:summary="@string/about_sum"
android:title="@string/about_text" >
<Preference
android:defaultValue="0"
android:key="aboutPref"
android:selectable="true"
android:summary="@string/about_sum"
android:title="@string/about_text" />

</PreferenceCategory>
</PreferenceScreen>